// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseBanner audit access expired, can upgrade snapshot: (auditAccessExpired, upgradeToAccess) 1`] = `
<Banner>
  Your audit access to this course has expired.
    
  Upgrade now to access your course again.
</Banner>
`;

exports[`CourseBanner audit access expired, cannot upgrade snapshot: (auditAccessExpired, findAnotherCourse hyperlink) 1`] = `
<Banner>
  Your audit access to this course has expired.
    
  <Hyperlink
    destination=""
  >
    Find another course
  </Hyperlink>
</Banner>
`;

exports[`CourseBanner course run active and cannot upgrade snapshot: (upgradseDeadlinePassed, exploreCourseDetails hyperlink) 1`] = `
<Banner>
  Your upgrade deadline for this course has passed.  To upgrade, enroll in a session that is farther in the future.
    
  <Hyperlink
    destination="test-course-website"
  >
    Explore course details.
  </Hyperlink>
</Banner>
`;

exports[`CourseBanner staff snapshot: isStaff 1`] = `
<Banner>
  Staff access only.
</Banner>
`;

exports[`CourseBanner too early snapshot: tooEarly 1`] = `
<Banner>
  You can't access this course just yet because the course hasn't started yet. The course will start on 11/11/3030.
</Banner>
`;

exports[`CourseBanner unmet prerequisites snapshot: unmetPrerequisites 1`] = `
<Banner>
  You can't access this course just yet because you have not met the pre-requisites.
</Banner>
`;
